tests/errors/compiler.ScriptNotExists.res
>> Compiler | given script path doesn't exist:
      error | filenotthere.art